refactor: use `java.util.List.getLast`